[package]
name = "skywalker"
version = "0.1.0"
authors = ["tooraj taraz <tooraj.info@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
num_cpus = "1.0"
clap = "2.33"
pcap = { version = "0.7", features = ["tokio"] }
