[package]
name = "skywalker"
version = "0.2.1"
authors = ["tooraj taraz <tooraj.info@gmail.com>"]
edition = "2018"


[dependencies]
librping = "0.1.7"
librtraceroute = "0.1.5"
ansi_term = "0.12"
num_cpus = "1.0"
clap = "2.33"
pcap = "0.7"
pktparse = "0.5.0"
tls-parser = "0.9.3"
dns-parser = "0.8"
hwaddr = "0.1.2"
nom = "5.0.0"
httparse = "1.3.0"
ctrlc = { version = "3.0", features = ["termination"] }
